# scs

./: .gitignore  CMakeLists.txt  scs.sln
scs/: llvm_scs.hpp  main.cpp  scs.hpp  scs.vcxproj  scs.vcxproj.filters
